--- a/Object_detection_using_pretrainedYolov5.ipynb
+++ b/Object_detection_using_pretrainedYolov5.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Object_detection_using_pretrainedYolov5.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPqlw520Goc5DSQknJ3r1AJ",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/PrajwalKalpande/YOLO-for-Object-Detection/blob/main/Object_detection_using_pretrainedYolov5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -99,6 +111,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#!unzip {Path to the car.zip file in your Google Drive} -d \"/content/data\"\n",
         "!unzip \"/content/drive/MyDrive/Colab Notebooks/car.zip\" -d \"/content/data\""
       ],
       "metadata": {
